[build-system]
requires = ["poetry-core>=1.0.0", "poetry-dynamic-versioning>=1.0.0,<2.0.0"]
build-backend = "poetry_dynamic_versioning.backend"

[tool.poetry]
name = "nubison-model"
version = "0.0.0"
description = ""
authors = ["KyuWoo Choi <kyuwoo.choi@gmail.com>"]
readme = "README.md"
include = ["nubison_model/Dockerfile"]

[tool.poetry.dependencies]
python = ">=3.9,<3.13"
mlflow = "^2.17.0"
bentoml = "^1.3.10"

[tool.poetry.group.dev.dependencies]
pytest = "^8.3.3"
tox = "^4.0"
psutil = "^6.1.0"
types-requests = "^2.32.0.20241016"
types-psutil = "^6.1.0.20241022"

[tool.poetry-dynamic-versioning]
enable = true
format-jinja = """
    {%- if distance == 0 and not dirty -%}
        {{ serialize_pep440(base, stage, revision) }}
    {%- elif revision is not none and not dirty -%}
        {{ serialize_pep440(base, stage, revision + 1, dev=distance, metadata=[commit]) }}
    {%- elif not dirty -%}
        {{ serialize_pep440(bump_version(base), stage, revision, dev=distance, metadata=[commit]) }}
    {%- else -%}
        {{ serialize_pep440(bump_version(base), stage, revision, dev=distance, metadata=[commit, timestamp]) }}
    {%- endif -%}
"""

[tool.isort]
profile = "black"  # or your preferred profile
known_first_party = ["test"]
sections = ["FUTURE", "STDLIB", "THIRDPARTY", "FIRSTPARTY", "LOCALFOLDER"]
default_section = "THIRDPARTY"